--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact</a>
+            <a href="pricing.html">Price</a>
+            <a href="contact.html">Contact</a>
         </div>
         <div class="mobile-menu">
             <i class="fas fa-bars"></i>
@@ -228,10 +228,6 @@
                 </div>
                 <p>"Excellent service for Emirates ID renewal and visa processing. The team was knowledgeable and efficient. They completed the process much faster than I expected. Very satisfied with their work."</p>
             </div>
-        </div>
-        <div class="testimonial-cta">
-            <a href="pricing.html" class="cta-button">View Our Pricing</a>
-            <a href="contact.html" class="cta-button cta-button-green">Contact Us Today</a>
         </div>
     </div>
 </section>
