--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome CDN for star icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Lottie Web Player -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
     <header>
         <nav class="container">
-            <a href="#" class="logo">تَرْحِيب TARHEEB</a>
+            <a href="#" class="logo">
+                <span class="logo-flex">
+                    <img src="img/logo.png" alt="Tarheeb Logo" class="logo-img" />
+                    <span class="logo-text">تَرْحِيب TARHEEB</span>
+                </span>
+            </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -46,7 +53,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
     <section class="about" id="about">
         <div class="container">
             <div class="about-content">
@@ -54,7 +60,6 @@
                     <h2>About Tarheeb</h2>
                     <p>With over 12 years of excellence in passport and visa services, Tarheeb has established itself as Dubai's most trusted partner for immigration and documentation needs.</p>
                     <p>Our team of licensed professionals specializes in all types of visa processing, passport services, and document attestation, ensuring a smooth and efficient process with complete transparency and guaranteed results.</p>
-                    <p>We pride ourselves on our 100% success rate and commitment to providing exceptional customer service that exceeds expectations.</p>
                     <div class="about-stats">
                         <div class="stat-item">
                             <div class="stat-number">5000+</div>
@@ -74,10 +79,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-image fade-in">
-                    <div class="about-card">
-                        <h3>Why Choose Us?</h3>
-                        <p>Professional expertise, guaranteed results, and personalized service for every client. We handle all your visa and passport needs with complete transparency and efficiency.</p>
+                
+                <div class="about-image"> 
+                    <div id="tarheeb-animation-canvas">
+                        <div class="animation-stage" id="stage-trust-handshake">
+                            <svg width="56" height="56" viewBox="0 0 56 56"><path d="M12 32l8 8c2 2 6 2 8 0l16-16" stroke="#2a5298" stroke-width="3" fill="none"/><path d="M44 20c2-2 2-6 0-8l-4-4c-2-2-6-2-8 0l-16 16" stroke="#2a5298" stroke-width="3" fill="none"/></svg>
+                            <p>Building Trust, Every Step</p>
+                        </div>
+                        <div class="animation-stage" id="stage-trust-shield">
+                            <svg width="56" height="56" viewBox="0 0 56 56"><path d="M28 6l18 6v12c0 14-10 22-18 26-8-4-18-12-18-26V12z" stroke="#2a5298" stroke-width="3" fill="none"/><path d="M20 28l6 6 10-10" stroke="#ffd700" stroke-width="3" fill="none"/></svg>
+                            <p>Your Security, Our Priority</p>
+                        </div>
+                        <div class="animation-stage" id="stage-trust-heart">
+                            <svg width="56" height="56" viewBox="0 0 56 56"><path d="M28 48s-16-10.7-16-22A8 8 0 0 1 28 16a8 8 0 0 1 16 10c0 11.3-16 22-16 22z" stroke="#2a5298" stroke-width="3" fill="none"/></svg>
+                            <p>Caring for Your Journey</p>
+                        </div>
+                        <div class="animation-stage" id="stage-trust-star">
+                            <svg width="56" height="56" viewBox="0 0 56 56"><polygon points="28,8 34,24 52,24 38,36 44,52 28,42 12,52 18,36 4,24 22,24" stroke="#2a5298" stroke-width="3" fill="none"/></svg>
+                            <p>Trusted by Thousands</p>
+                        </div>
+                        <div class="animation-stage" id="stage-trust-group">
+                            <svg width="56" height="56" viewBox="0 0 56 56"><circle cx="18" cy="28" r="8" stroke="#2a5298" stroke-width="3" fill="none"/><circle cx="38" cy="28" r="8" stroke="#2a5298" stroke-width="3" fill="none"/><ellipse cx="28" cy="40" rx="18" ry="8" stroke="#2a5298" stroke-width="3" fill="none"/></svg>
+                            <p>A Community You Can Rely On</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -90,34 +114,44 @@
             <h2 class="section-title">Our Premium Services</h2>
             <div class="services-grid">
                 <div class="service-card fade-in">
-                    <div class="service-icon"><i class="fas fa-passport"></i></div>
-                    <h3 class="service-title">Passport Services</h3>
-                    <p class="service-description">Complete passport processing including new applications, renewals, and replacements with expert guidance and fast turnaround.</p>
+                    <div class="service-icon"><i class="fas fa-building"></i></div>
+                    <h3 class="service-title">Company Formation</h3>
+                    <p class="service-description">Expert assistance in setting up your business in the UAE, from choosing the right structure to full registration support.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <div class="service-icon"><i class="fas fa-plane-departure"></i></div>
-                    <h3 class="service-title">Visa Processing</h3>
-                    <p class="service-description">Comprehensive visa services for all Emirates including tourist, business, and residence visas with guaranteed processing.</p>
+                    <div class="service-icon"><i class="fas fa-certificate"></i></div>
+                    <h3 class="service-title">Trade License</h3>
+                    <p class="service-description">Comprehensive trade license services for all business types, ensuring compliance and fast approvals.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <div class="service-icon"><i class="fas fa-id-card"></i></div>
-                    <h3 class="service-title">Emirates ID</h3>
-                    <p class="service-description">Emirates ID application, renewal, and replacement services with quick processing and minimal documentation requirements.</p>
+                    <div class="service-icon"><i class="fas fa-user-tie"></i></div>
+                    <h3 class="service-title">Employment Visa</h3>
+                    <p class="service-description">Seamless employment visa processing for companies and professionals, including renewals and new applications.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <div class="service-icon"><i class="fas fa-file-alt"></i></div>
-                    <h3 class="service-title">Document Attestation</h3>
-                    <p class="service-description">Professional document attestation services for all types of certificates and legal documents with authenticated processing.</p>
+                    <div class="service-icon"><i class="fas fa-users"></i></div>
+                    <h3 class="service-title">Family Visa</h3>
+                    <p class="service-description">Family visa services to help you bring your loved ones to the UAE with ease and peace of mind.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <div class="service-icon"><i class="fas fa-home"></i></div>
-                    <h3 class="service-title">Residence Permits</h3>
-                    <p class="service-description">Complete residence permit processing including family visas and domestic worker visas with comprehensive support.</p>
+                    <div class="service-icon"><i class="fas fa-user-shield"></i></div>
+                    <h3 class="service-title">Investor Visa</h3>
+                    <p class="service-description">Investor visa solutions for entrepreneurs and business owners seeking long-term residency in the UAE.</p>
+                </div>
+                <div class="service-card fade-in">
+                    <div class="service-icon"><i class="fas fa-medal"></i></div>
+                    <h3 class="service-title">Golden Visa</h3>
+                    <p class="service-description">Premium Golden Visa services for eligible investors, professionals, and talents, offering long-term residency.</p>
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon"><i class="fas fa-briefcase"></i></div>
-                    <h3 class="service-title">Business Visas</h3>
-                    <p class="service-description">Comprehensive business visa services including investor visas and partner visas with expert consultation and guidance.</p>
+                    <h3 class="service-title">Tasheel & Labor Services</h3>
+                    <p class="service-description">All Tasheel and labor-related services, including work permits, contracts, and government transactions.</p>
+                </div>
+                <div class="service-card fade-in">
+                    <div class="service-icon"><i class="fas fa-language"></i></div>
+                    <h3 class="service-title">Attestation & Translation</h3>
+                    <p class="service-description">Certified document attestation and professional translation services for all your legal and business needs.</p>
                 </div>
             </div>
         </div>
@@ -266,17 +300,21 @@
                         <div class="contact-details">
                             <h4>Connect with us</h4>
                             <p>
+                            <div class="footer-social">
                                 <a href="#" aria-label="Facebook" style="margin-right:10px;"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#" aria-label="Twitter" style="margin-right:10px;"><i class="fab fa-twitter"></i></a>
                                 <a href="#" aria-label="Instagram" style="margin-right:10px;"><i class="fab fa-instagram"></i></a>
                                 <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                            </div>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="contact-form fade-in">
                     <h3>Send us a Message</h3>
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+                        <input type="hidden" name="access_key" value="7f2821be-c561-4983-9f16-0d87b15f21d5"> 
+                    
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -293,12 +331,14 @@
                             <label for="service">Service Required</label>
                             <select id="service" name="service" required>
                                 <option value="">Select a service</option>
-                                <option value="passport">Passport Services</option>
-                                <option value="visa">Visa Processing</option>
-                                <option value="emirates-id">Emirates ID</option>
-                                <option value="attestation">Document Attestation</option>
-                                <option value="residence">Residence Permits</option>
-                                <option value="business">Business Visas</option>
+                                <option value="company-formation">Company Formation</option>
+                                <option value="trade-license">Trade License</option>
+                                <option value="employment-visa">Employment Visa</option>
+                                <option value="family-visa">Family Visa</option>
+                                <option value="investor-visa">Investor Visa</option>
+                                <option value="golden-visa">Golden Visa</option>
+                                <option value="tasheel-labor">Tasheel & Labor Services</option>
+                                <option value="attestation-translation">Attestation & Translation</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -333,12 +373,14 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#services">Passport Services</a></li>
-                        <li><a href="#services">Visa Processing</a></li>
-                        <li><a href="#services">Emirates ID</a></li>
-                        <li><a href="#services">Document Attestation</a></li>
-                        <li><a href="#services">Residence Permits</a></li>
-                        <li><a href="#services">Business Visas</a></li>
+                        <li><a href="#services">Company Formation</a></li>
+                        <li><a href="#services">Trade License</a></li>
+                        <li><a href="#services">Employment Visa</a></li>
+                        <li><a href="#services">Family Visa</a></li>
+                        <li><a href="#services">Investor Visa</a></li>
+                        <li><a href="#services">Golden Visa</a></li>
+                        <li><a href="#services">Tasheel & Labor Services</a></li>
+                        <li><a href="#services">Attestation & Translation</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -361,5 +403,71 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
+    <script>
+// About section animation sequencing
+(function() {
+  const stages = document.querySelectorAll('#tarheeb-animation-canvas .animation-stage');
+  let current = 0;
+  function showStage(idx) {
+    stages.forEach((el, i) => el.classList.toggle('active', i === idx));
+  }
+  showStage(current);
+  setInterval(() => {
+    current = (current + 1) % stages.length;
+    showStage(current);
+  }, 2200);
+})();
+</script>
+<script>
+    const form = document.getElementById('contactForm');
+    const resultDiv = document.createElement('div'); // Create a div for messages
+
+    // Add a div to display messages (success/error)
+    // You might want to style this div with CSS for better appearance
+    form.parentNode.insertBefore(resultDiv, form.nextSibling); 
+
+    form.addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission (page reload)
+
+        const formData = new FormData(form);
+        const object = {};
+        formData.forEach((value, key) => {
+            object[key] = value;
+        });
+        const json = JSON.stringify(object);
+
+        try {
+            const response = await fetch("https://api.web3forms.com/submit", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "Accept": "application/json"
+                },
+                body: json
+            });
+
+            const data = await response.json();
+
+            if (data.success) {
+                resultDiv.style.color = 'green';
+                resultDiv.textContent = "Message sent successfully!";
+                form.reset(); // Clear the form fields
+            } else {
+                resultDiv.style.color = 'red';
+                resultDiv.textContent = data.message || "Something went wrong. Please try again.";
+            }
+        } catch (error) {
+            resultDiv.style.color = 'red';
+            resultDiv.textContent = "An error occurred. Please check your network and try again.";
+            console.error('Error submitting form:', error);
+        } finally {
+            // Optional: Hide the message after a few seconds
+            setTimeout(() => {
+                resultDiv.textContent = '';
+            }, 5000); 
+        }
+    });
+</script>
+<!-- nothing -->
 </body>
 </html>
