--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                     <span class="logo-text">تَرْحِيب TARHEEB</span>
                 </span>
             </a>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
