--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                     <div class="about-carousel-wrapper">
                         <div class="about-carousel">
                             <div class="about-carousel-slide">
-                                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Dubai Skyline">
+                                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=800&q=80" alt="5000+ Happy Clients Celebrating Success">
                             </div>
                             <div class="about-carousel-slide">
-                                <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=800&q=80" alt="Dubai Marina Night">
+                                <img src="https://images.unsplash.com/photo-1507925921958-8a62f3d1a50d?auto=format&fit=crop&w=800&q=80" alt="100% Success Rate Achievement">
                             </div>
                             <div class="about-carousel-slide">
-                                <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Palm Jumeirah">
+                                <img src="https://images.unsplash.com/photo-1556075798-4825dfaaf498?auto=format&fit=crop&w=800&q=80" alt="24/7 Customer Support Service">
                             </div>
                             <div class="about-carousel-slide">
-                                <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=800&q=80" alt="Modern Office">
+                                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?auto=format&fit=crop&w=800&q=80" alt="12+ Years Experience in Visa Services">
                             </div>
                             <div class="about-carousel-slide">
-                                <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=800&q=80" alt="Business Team">
+                                <img src="https://images.unsplash.com/photo-1436450412740-6b988f486c6b?auto=format&fit=crop&w=800&q=80" alt="Professional Passport and Visa Processing">
                             </div>
                         </div>
                     </div>
@@ -183,56 +183,95 @@
             </div>
         </div>
     </section>
-
 <!-- Clients/Testimonials Section -->
-    <section id="testimonials" class="testimonials">
-        <div class="container">
-            <h2 class="section-title">What Our Clients Say</h2>
-            <div class="testimonials-carousel-wrapper" style="overflow:hidden; position:relative;">
-                <div class="testimonials-carousel" style="display:flex; transition: transform 0.7s cubic-bezier(.77,0,.18,1); will-change:transform;">
-                    <div class="testimonial-card">
-                        <div class="testimonial-header">
-                            <img src="https://ui-avatars.com/api/?name=Ali+Khan&background=009966&color=fff" alt="Ali Khan">
-                            <div class="client-info">
-                                <h4>Ali Khan</h4>
-                                <p>Entrepreneur</p>
-                            </div>
+<section id="testimonials" class="testimonials">
+    <div class="container">
+        <h2 class="section-title">What Our Clients Say</h2>
+        <div class="testimonials-carousel-wrapper">
+            <div class="testimonials-carousel">
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Ali+Khan&background=009966&color=fff" alt="Ali Khan">
+                        <div class="client-info">
+                            <h4>Ali Khan</h4>
+                            <p>Entrepreneur</p>
                         </div>
-                        <div class="rating">
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                        </div>
-                        <p>"Tarheeb made my company setup process seamless and stress-free. Highly recommended!"</p>
                     </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-header">
-                            <img src="https://ui-avatars.com/api/?name=Fatima+Zahra&background=FFD700&color=222831" alt="Fatima Zahra">
-                            <div class="client-info">
-                                <h4>Fatima Zahra</h4>
-                                <p>HR Manager</p>
-                            </div>
-                        </div>
-                        <div class="rating">
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
-                        </div>
-                        <p>"Professional, fast, and reliable service. Tarheeb is my go-to for all document needs."</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-header">
-                            <img src="https://ui-avatars.com/api/?name=Omar+Saeed&background=222831&color=FFD700" alt="Omar Saeed">
-                            <div class="client-info">
-                                <h4>Omar Saeed</h4>
-                                <p>Investor</p>
-                            </div>
+                    <p>"Tarheeb made my company setup process seamless and stress-free. Highly recommended!"</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Fatima+Zahra&background=FFD700&color=222831" alt="Fatima Zahra">
+                        <div class="client-info">
+                            <h4>Fatima Zahra</h4>
+                            <p>HR Manager</p>
                         </div>
-                        <div class="rating">
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                        </div>
-                        <p>"Their team handled my investor visa quickly and efficiently. Excellent customer support!"</p>
                     </div>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p>"Professional, fast, and reliable service. Tarheeb is my go-to for all document needs."</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Omar+Saeed&background=222831&color=FFD700" alt="Omar Saeed">
+                        <div class="client-info">
+                            <h4>Omar Saeed</h4>
+                            <p>Investor</p>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
+                    <p>"Their team handled my investor visa quickly and efficiently. Excellent customer support!"</p>
+                </div>
+                <!-- Duplicate for seamless loop -->
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Ali+Khan&background=009966&color=fff" alt="Ali Khan">
+                        <div class="client-info">
+                            <h4>Ali Khan</h4>
+                            <p>Entrepreneur</p>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
+                    <p>"Tarheeb made my company setup process seamless and stress-free. Highly recommended!"</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Fatima+Zahra&background=FFD700&color=222831" alt="Fatima Zahra">
+                        <div class="client-info">
+                            <h4>Fatima Zahra</h4>
+                            <p>HR Manager</p>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p>"Professional, fast, and reliable service. Tarheeb is my go-to for all document needs."</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <img src="https://ui-avatars.com/api/?name=Omar+Saeed&background=222831&color=FFD700" alt="Omar Saeed">
+                        <div class="client-info">
+                            <h4>Omar Saeed</h4>
+                            <p>Investor</p>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
+                    <p>"Their team handled my investor visa quickly and efficiently. Excellent customer support!"</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Pricing Section -->
     <section class="pricing" id="pricing">
